--- a/home.css
+++ b/home.css
@@ -1,27 +1,71 @@
-.header{
+html {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
+  .header {
     text-align: center;
     margin-top: -450px;
-}
-.head{
+  }
+  
+  .head {
     font-size: 2.5rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-bottom: 50px;
-}
-.buttons{
-    
-}
-.text_content{
+  }
+  
+  .buttons {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .text_content {
     margin-top: 250px;
     font-size: 3.5rem;
-}
-h1, p{
+  }
+  
+  h1, p {
     margin: 0%;
     text-align: center;
-}
-.join{
-    padding-left: 500px;
-}
-.image-church{
+  }
+  
+  .Join {
+    position: relative;
+    background-color: transparent;
+    border-color: white;
+    border-radius: 18px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+  }
+  
+  .Give {
+    position: relative;
+    padding-left: -500px;
+    background-color: transparent;
+    border-color: white;
+    border-radius: 18px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+  }
+  
+  .About {
+    position: relative;
+    padding-left: -500px;
+    background-color: transparent;
+    border-color: white;
+    border-radius: 18px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+  }
+  
+  .image-church {
     background-image: url(img/home.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -29,5 +73,4 @@ h1, p{
     padding-bottom: 500px;
     margin-top: 0px;
     margin-bottom: 0px;
-
-}
+  }
