--- a/about.css
+++ b/about.css
@@ -1,3 +1,12 @@
 h1{
   text-align: center;
 }
+.connect,
+.Buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.Buttons{
+  background-color: white;
+}
