--- a/home.css
+++ b/home.css
@@ -27,34 +27,10 @@ html {
     text-align: center;
   }
   
-  .Join {
-    position: relative;
-    background-color: transparent;
-    border-color: white;
-    border-radius: 18px;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-  }
-  
-  .Give {
-    position: relative;
-    padding-left: -500px;
-    background-color: transparent;
-    border-color: white;
-    border-radius: 18px;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-  }
-  
+  .Join,
+  .Give,
   .About {
     position: relative;
-    padding-left: -500px;
     background-color: transparent;
     border-color: white;
     border-radius: 18px;
@@ -63,8 +39,12 @@ html {
     text-align: center;
     display: inline-block;
     font-size: 16px;
+    margin: 0 90px; /* This part created some space gaps*/
   }
   
+  body{
+    overflow: hidden;
+  }
   .image-church {
     background-image: url(img/home.jpg);
     background-repeat: no-repeat;
