--- a/about.css
+++ b/about.css
@@ -1,12 +1,45 @@
-h1{
+body{
+  background: #EBF4FA;
+  margin: 0;
+} 
+.links{
+  width: 100%;
+  height: 100%;
+}
+ul {
+  background-color: #FFFFC2;
+  margin: 0;
   text-align: center;
 }
-.connect,
-.Buttons {
-  display: flex;
-  justify-content: center;
+ul li {
+  list-style: none;
+  display: inline-block;
+  line-height: 100px;
 }
-
-.Buttons{
-  background-color: white;
+ul li  a {
+  padding: 0 20px;
+  text-decoration: none;  /*disablng the underline*/
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  text-align: center;
+}
+ul li  a :hover{
+  cursor: pointer;
+  font-size: 20px;
+  transition: 1.2;
+}
+h1{
+  text-align: center;
+  margin: 0;
+  padding-top: 5px;
+}
+.back{
+  font-size: large;
+  background-color: transparent;
+  border-radius: 18px;
+  position: absolute;
+  margin-top: -135px;
+  margin-left: 35px;
+  width: 10%;
 }
